--- a/cv.html
+++ b/cv.html
@@ -29,6 +29,7 @@
         <p class="col">Corey Ratcliffe is a PhD Student who is currently working towards developing network models of seizure recurrence in neurocysticercosis. Based at the University of Liverpool, collecting data at NIMHANS Bangalore.
         </br>The intention for this site is threefold; for it to function as a professional-academic portfolio, a resource for those new to modern neuroscience practices and methods, and an introduction to me outside of academia, in the form of a book & music blog. To this end, please feel free to get in touch with me—via my contact address in the page footer—if you'd like any further information regarding my work or my interests. Cheers!
       </div>
+      <h3>Curriculum Vitae:</h3>
       <div class="row">
         <a href="resources/CV.pdf" download="c-ratcliffe_CV.pdf">
           <img class="col" src="img/CV.png" alt="CV - 05.24" style="width:100%;min-width:100%">
